--- a/server/public_html/app/assets/language/default.json
+++ b/server/public_html/app/assets/language/default.json
@@ -495,6 +495,15 @@
 	"window-globals-runtime": "current runtime", 
 	"window-globals-wsserver": "webservice url", 
 	"window-globals-version": "TilBuci version", 
+	"window-globals-session": "unique session ID", 
+	"window-globals-date": "curren date (Y-M-D)", 
+	"window-globals-time": "current time (H:M:S)", 
+	"window-globals-year": "current year", 
+	"window-globals-month": "current month", 
+	"window-globals-day": "current month day", 
+	"window-globals-hour": "current hour (24h format)", 
+	"window-globals-minute": "current minutes", 
+	"window-globals-second": "current seconds", 
 	
 	"window-acscene-title": "Scene and movie actions", 
 	"window-acscene-list": "Current movie scenes", 
@@ -764,7 +773,7 @@
 	"window-exchexport-about": "Exported movies are saved as ZIP files that you can download and import on other TilBuci installations or use on your own project. Notice that this process may take some time. If you are sure you want to export the current movie, click the button below. After creating the ZIP file, the download will automatically start.", 
 	"window-exchexport-button": "Export the current movie", 
 	"window-exchexport-error": "Error while exporting your movie.", 
-	"window-exchexport-ok": "Your movie was exported. Please wait for the download to begin. You can also download the zip file from  the export folder of your TulBuci installation server.", 
+	"window-exchexport-ok": "Your movie was exported. Please wait for the download to begin. You can also download the zip file from  the export folder of your TilBuci installation server.", 
 	
 	"window-exchimport-title": "Movie import",
 	"window-exchimport-aboutid": "To begin the movie import process, please provide a movie ID (you may use the same one of the exported movie, but that is not required).",
@@ -821,7 +830,7 @@
 	"window-exchpwa-nolang": "You must provide a valid language code like en-US or pt-BR.",
 	"window-exchpwa-nourl": "Pelase provide an access url starting with https://",
 	"window-exchpwa-error": "Error while exporting your PWA application.", 
-	"window-exchpwa-ok": "Your PWA application was exported. Please wait for the download to begin. You can also download the zip file from  the export folder of your TulBuci installation server.", 
+	"window-exchpwa-ok": "Your PWA application was exported. Please wait for the download to begin. You can also download the zip file from  the export folder of your TilBuci installation server.", 
 	"window-exchpwa-location": "Export to (your installation must run from HTTPS to enable the /pwa export option)",
 	"window-exchpwa-locsite": "/pwa folder",
 	"window-exchpwa-loczip": "zip file",
@@ -831,7 +840,7 @@
 	"window-exchpub-about": "You can export your creation for publishing on services like itch.io or Game Jolt. Just click the button below to export a zip file. At the services, include your creation as an HTML project. You may need to allow the service domain to communicate with this TilBuci installation to use online features like login or save states (just go to Visitors left menu and look for the CORS tab - itch.io and gamejolt.com are automatically enabled).",
 	"window-exchpub-button": "Export the movie",
 	"window-exchpub-error": "Error while exporting your movie. Please try again.",
-	"window-exchpub-ok": "Your movie was exported. Please wait for the download to begin. You can also download the zip file from  the export folder of your TulBuci installation server.", 
+	"window-exchpub-ok": "Your movie was exported. Please wait for the download to begin. You can also download the zip file from  the export folder of your TilBuci installation server.", 
 	
 	"window-exchdesk-title": "Save movie as a desktop app",
 	"window-exchdesk-about": "You can export your movie as an ElectronJS project to create a desktop application for Windows, Linux or macOS systems, just fill the form values. You can use the system.quit action to close yout application - this is important if you are creating a fullscreen or kiosk application. After the project is creted, TilBuci will start downloading a zip file. Please check out the included readme.txt file for further instructions. Desktop applications require some movie information like the icon, the author and a description.",
@@ -869,7 +878,7 @@
 	"window-exchcord-aboutcord": "The mobile apps are created using Apache Cordova.", 
 	"window-exchcord-buttoncord": "Visit the Apache Cordova site", 
 	"window-exchcord-error": "Error while exporting your project. Please try again.",
-	"window-exchcord-ok": "Your project was exported. Please wait for the download to begin. You can also download the zip file from the export folder of your TulBuci installation server.", 
+	"window-exchcord-ok": "Your project was exported. Please wait for the download to begin. You can also download the zip file from the export folder of your TilBuci installation server.", 
 	
 	"window-media-file": "Files",
 	"window-media-preview": "Preview",
@@ -878,6 +887,12 @@
 	"window-media-nolist": "Error while loading the files list. Please try again.",
 	"window-media-openfolder": "Open folder",
 	"window-media-addstage": "Add to the stage",
+	"window-media-addcolast": "Add to collection",
+	"window-media-addtocol": "Add to collection and stage",
+	"window-media-colname": "Collection:", 
+	"window-media-closeafter": "close after adding",
+	"window-media-addedcol": "New asset created.",
+	"window-media-addedstage": "Media imported to stage.",
 	"window-media-addcol": "Set asset file",
 	"window-media-addshape": "Set new shape",
 	"window-media-addast": "Add as new asset",
@@ -895,11 +910,11 @@
 	"window-media-removefileer": "Error while removing the file.", 
 	"window-media-removewarn": "Are you sure you want to remove the selected item?", 
 	
-	"window-collectionadd-title": "Movie media collections",
+	"window-collectionadd-title": "Add from media collection",
 	"window-collection-title": "Manage scene collections",
 	"window-collection-cols": "Available collections",
-	"window-collectionadd-cols": "Available collections*",
-	"window-collectionadd-colsabout": "* this list does not show collections already used on current scene",
+	"window-collectionadd-cols": "Collections from other scenes",
+	"window-collectionadd-colscene": "Collections on current scene",
 	"window-collection-assets": "Collection assets",
 	"window-collection-remove": "Remove selected collection",
 	"window-collection-removea": "Remove selected asset",
@@ -1348,7 +1363,7 @@
 	"acinfo-intrandom-p1": "variable name to receive the result", 
 	"acinfo-intrandom-p2": "minimum value",
 	"acinfo-intrandom-p3": "maximum value",
-	"acinfo-intset": "set a int variable", 
+	"acinfo-intset": "set an int variable", 
 	"acinfo-intset-p1": "the variable name", 
 	"acinfo-intset-p2": "the value",
 	"acinfo-intsubtract": "subtract two int values", 
