--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -673,6 +673,7 @@
 	"menu-keyframe-addok": "New keyframe add.", 
 	
 	"menu-contraptions-title": "Contraptions", 
+	"menu-contraptions-cover": "Content cover", 
 	"menu-contraptions-menus": "Menu layouts", 
 	"menu-contraptions-dialogues": "Dialogues", 
 	
@@ -722,7 +723,7 @@
 	
 	"window-contrmenu-title": "Menu layouts",
 	"window-contrmenu-registered": "Registered menu layouts",
-	"window-contrmenu-properties": "Layout properties",
+	"window-contrmenu-properties": "Menu layout properties",
 	"window-contrmenu-load": "Load layout",
 	"window-contrmenu-remove": "Remove layout",
 	"window-contrmenu-save": "Save current menu layout settings",
@@ -743,7 +744,24 @@
 	"window-contrmenu-nographics": "You must set the images for the menu background and for the buttons.",
 	"window-contrmenu-ersave": "Error while saving the menu layouts. Please try again.",
 	"window-contrmenu-ersave1": "Your access level doesn't allow setting the menu layouts.",
-	"window-contrmenu-oksave": "The menu layots were saved.",
+	"window-contrmenu-oksave": "The menu layouts were saved.",
+	
+	"window-contrcover-title": "Content covers",
+	"window-contrcover-registered": "Registered content covers",
+	"window-contrcover-load": "Load cover",
+	"window-contrcover-remove": "Remove cover",
+	"window-contrcover-name": "Content cover name",
+	"window-contrcover-properties": "Content cover properties",
+	"window-contrcover-landscape": "Landscape display cover picture", 
+	"window-contrcover-portrait": "Portrait display cover picture", 
+	"window-contrcover-block": "Block content interaction while showing?", 
+	"window-contrcover-save": "Save current content cover settings",
+	"window-contrcover-nographics": "You must set at least one of the cover pictures.",
+	"window-contrcover-noname": "You must give the content cover a name with at least 3 characters.",
+	"window-contrcover-ersave": "Error while saving the content covers. Please try again.",
+	"window-contrcover-ersave1": "Your access level doesn't allow setting the content covers.",
+	"window-contrcover-oksave": "The content covers were saved.",
+	"window-contrcover-add": "Add/update content cover",
 	
 	"menu-media-title": "Media", 
 	"menu-media-collectionsadd": "Add from collection", 
@@ -874,6 +892,8 @@
 	"window-exchcord-appauthor": "App author", 
 	"window-exchcord-appemail": "Author e-mail", 
 	"window-exchcord-applicense": "App license", 
+	"window-exchcord-fullscr": "Display on fullscreen (no status bar)?", 
+	"window-exchcord-icon": "App icon (use a 512x512 pixels PNG file)", 
 	"window-exchcord-button": "Export application", 
 	"window-exchcord-aboutcord": "The mobile apps are created using Apache Cordova.", 
 	"window-exchcord-buttoncord": "Visit the Apache Cordova site", 
@@ -1272,6 +1292,11 @@
 	"acinfo-showmenu-p5": "x distance from border or position", 
 	"acinfo-showmenu-p6": "y distance from border or position", 
 	"acinfo-hidemenu": "hide menus", 
+	"acinfo-showcover": "show content cover",
+	"acinfo-showcover-p1": "content cover name", 	
+	"acinfo-hidecover": "hide content covers", 
+	"acinfo-showloading": "show loading icon", 
+	"acinfo-hideloading": "hide loading icon", 
 	
 	"placement-top": "top", 
 	"placement-topleft": "top left", 
@@ -1722,6 +1747,8 @@
 	"acinfo-systemquit": "end app execution (while on desktop app mode)",
 	"acinfo-systemsendevent": "send a custom event to player listeners",
     "acinfo-systemsendevent-p1": "event parameter (you may add more)",
+	"acinfo-systemsetkftime": "set the time between keyframes",
+	"acinfo-systemsetkftime-p1": "time in miliseconds (250 at least)",
 	"acinfo-run": "run a movie action snippet",
     "acinfo-run-p1": "the snippet name",
 	"acinfo-cssclear": "clear CSS styles set",
