--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -675,7 +675,7 @@
 	"menu-contraptions-title": "Contraptions", 
 	"menu-contraptions-cover": "Content cover", 
 	"menu-contraptions-menus": "Menu layouts", 
-	"menu-contraptions-dialogues": "Dialogues", 
+	"menu-contraptions-music": "Music", 
 	
 	"window-kfmanage-title": "Scene keyframes",
 	"window-kfmanage-keyframes": "Keyframes",
@@ -762,6 +762,21 @@
 	"window-contrcover-ersave1": "Your access level doesn't allow setting the content covers.",
 	"window-contrcover-oksave": "The content covers were saved.",
 	"window-contrcover-add": "Add/update content cover",
+	
+	"window-contrmusic-title": "Music",
+	"window-contrmusic-registered": "Registered music tracks",
+	"window-contrmusic-load": "Load music",
+	"window-contrmusic-remove": "Remove music",
+	"window-contrmusic-name": "Music track name",
+	"window-contrmusic-add": "Add/update music track",
+	"window-contrmusic-properties": "Music track properties",
+	"window-contrmusic-file": "Audio file", 
+	"window-contrmusic-save": "Save current music track settings",
+	"window-contrmusic-noaudio": "You must set the track audio file.",
+	"window-contrmusic-noname": "You must give the music track a name with at least 3 characters.",
+	"window-contrmusic-ersave": "Error while saving the music tracks. Please try again.",
+	"window-contrmusic-ersave1": "Your access level doesn't allow setting the music tracks.",
+	"window-contrmusic-oksave": "The music tracks were saved.",
 	
 	"menu-media-title": "Media", 
 	"menu-media-collectionsadd": "Add from collection", 
@@ -1297,6 +1312,12 @@
 	"acinfo-hidecover": "hide content covers", 
 	"acinfo-showloading": "show loading icon", 
 	"acinfo-hideloading": "hide loading icon", 
+	"acinfo-musicplay": "play music track", 
+	"acinfo-musicplay-p1": "music track name", 
+	"acinfo-musicpause": "pause current music", 
+	"acinfo-musicstop": "stop music playback",
+	"acinfo-musicvolume": "set music track volume", 
+	"acinfo-musicvolume-p1": "sound volume (0 to 100)", 
 	
 	"placement-top": "top", 
 	"placement-topleft": "top left", 
