--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -464,9 +464,10 @@
 	"window-globals-instancen": "Name", 
 	"window-globals-movie": "Movie globals and input content", 
 	"window-globals-text": "Text", 
+	"window-globals-text": "Text", 
 	"window-globals-number": "Number", 
 	"window-globals-flag": "Flag", 
-	"window-globals-name": "Global or input name", 
+	"window-globals-name": "Global, input or form element name", 
 	"window-globals-get": "get value", 
 	"window-globals-playing": "is the movie playing right now?", 
 	"window-globals-userlogged": "is there an user logged?", 
@@ -585,6 +586,7 @@
 	"window-acinput-text": "Text input value", 
 	"window-acnumeric-text": "Numeric input value", 
 	"window-actoggle-text": "Toggle input value", 
+	"window-acform-text": "Form element value", 
 	
 	"window-scenenew-title": "New scene",
 	"window-scenenew-name": "Scene name", 
@@ -676,6 +678,7 @@
 	"menu-contraptions-cover": "Content cover", 
 	"menu-contraptions-menus": "Menu layouts", 
 	"menu-contraptions-music": "Music", 
+	"menu-contraptions-forms": "Input Forms", 
 	
 	"window-kfmanage-title": "Scene keyframes",
 	"window-kfmanage-keyframes": "Keyframes",
@@ -762,6 +765,45 @@
 	"window-contrcover-ersave1": "Your access level doesn't allow setting the content covers.",
 	"window-contrcover-oksave": "The content covers were saved.",
 	"window-contrcover-add": "Add/update content cover",
+	
+	"window-contrform-title": "Input forms",
+	"window-contrform-registered": "Registered input forms",
+	"window-contrform-load": "Load form",
+	"window-contrform-remove": "Remove form",
+	"window-contrform-save": "Save current input forms settings",
+	"window-contrform-name": "Input form name",
+	"window-contrform-add": "Add/update input form",
+	"window-contrform-elements": "Input form elements",
+	"window-contrform-eladd": "add element",
+	"window-contrform-elrem": "remove element",
+	"window-contrform-noname": "You must give the input form a name with at least 3 characters.",
+	"window-contrform-nook": "You must set the image for the ok button.",
+	"window-contrform-noelem": "You must add input elements to your form.",
+	"window-contrform-ersave": "Error while saving the input forms. Please try again.",
+	"window-contrform-ersave1": "Your access level doesn't allow setting the input forms.",
+	"window-contrform-oksave": "The inut forms were saved.",
+	"window-contrform-namebg": "background graphic (optional)",
+	"window-contrform-nameok": "submit button graphic",
+	"window-contrform-namecancel": "cancel button graphic (optional)",
+	"window-contrform-setbutton": "Set element", 
+	"window-contrform-background": "Background graphic (optional)", 
+	"window-contrform-btok": "Submit button graphic", 
+	"window-contrform-btcancel": "Cancel button graphic (optional)", 
+	"window-contrform-new": "new element", 
+	"window-contrform-elname": "Element name", 
+	"window-contrform-eltype": "Type", 
+	"window-contrform-eltype-input": "text input", 
+	"window-contrform-eltype-select": "select", 
+	"window-contrform-eltype-toggle": "toggle", 
+	"window-contrform-eltype-numeric": "numeric stepper", 
+	"window-contrform-eltype-password": "password", 
+	"window-contrform-eltype-textarea": "text area", 
+	"window-contrform-formelselect": "Select type options (use ; to split values)",
+	"window-contrform-formelwidth": "Element width", 
+	"window-contrform-formelposition": "Element position (relative to form origin)", 
+	"window-contrform-showtname": "The element name must have at least 3 characters.", 
+	"window-contrform-usedname": "The provided name is already used by another element.", 
+	
 	
 	"window-contrmusic-title": "Music",
 	"window-contrmusic-registered": "Registered music tracks",
@@ -1318,6 +1360,19 @@
 	"acinfo-musicstop": "stop music playback",
 	"acinfo-musicvolume": "set music track volume", 
 	"acinfo-musicvolume-p1": "sound volume (0 to 100)", 
+	"acinfo-showform": "show an input form",
+	"acinfo-showform-p1": "the input form name", 
+	"acinfo-showform-p2": "form x position", 
+	"acinfo-showform-p3": "form y position", 
+	"acinfo-hideform": "hide input forms", 
+	"acinfo-setformvalue": "set an element value of current input form", 
+	"acinfo-setformvalue-p1": "the element name", 
+	"acinfo-setformvalue-p2": "the value to set (true/false for toggles)", 
+	"acinfo-setformstepper": "set numeric stepper element properties", 
+	"acinfo-setformstepper-p1": "the numeric stepper element name", 
+	"acinfo-setformstepper-p2": "minimum value", 
+	"acinfo-setformstepper-p3": "maximum value", 
+	"acinfo-setformstepper-p4": "step increase/decrease amount", 
 	
 	"placement-top": "top", 
 	"placement-topleft": "top left", 
