--- a/server/public_html/app/assets/language/default.json
+++ b/server/public_html/app/assets/language/default.json
@@ -464,9 +464,10 @@
 	"window-globals-instancen": "Name", 
 	"window-globals-movie": "Movie globals and input content", 
 	"window-globals-text": "Text", 
+	"window-globals-text": "Text", 
 	"window-globals-number": "Number", 
 	"window-globals-flag": "Flag", 
-	"window-globals-name": "Global or input name", 
+	"window-globals-name": "Global, input or form element name", 
 	"window-globals-get": "get value", 
 	"window-globals-playing": "is the movie playing right now?", 
 	"window-globals-userlogged": "is there an user logged?", 
@@ -585,6 +586,7 @@
 	"window-acinput-text": "Text input value", 
 	"window-acnumeric-text": "Numeric input value", 
 	"window-actoggle-text": "Toggle input value", 
+	"window-acform-text": "Form element value", 
 	
 	"window-scenenew-title": "New scene",
 	"window-scenenew-name": "Scene name", 
@@ -673,8 +675,11 @@
 	"menu-keyframe-addok": "New keyframe add.", 
 	
 	"menu-contraptions-title": "Contraptions", 
+	"menu-contraptions-cover": "Content cover", 
 	"menu-contraptions-menus": "Menu layouts", 
-	"menu-contraptions-dialogues": "Dialogues", 
+	"menu-contraptions-music": "Music", 
+	"menu-contraptions-forms": "Input Forms", 
+	"menu-contraptions-interfaces": "Interfaces", 
 	
 	"window-kfmanage-title": "Scene keyframes",
 	"window-kfmanage-keyframes": "Keyframes",
@@ -722,7 +727,7 @@
 	
 	"window-contrmenu-title": "Menu layouts",
 	"window-contrmenu-registered": "Registered menu layouts",
-	"window-contrmenu-properties": "Layout properties",
+	"window-contrmenu-properties": "Menu layout properties",
 	"window-contrmenu-load": "Load layout",
 	"window-contrmenu-remove": "Remove layout",
 	"window-contrmenu-save": "Save current menu layout settings",
@@ -743,7 +748,118 @@
 	"window-contrmenu-nographics": "You must set the images for the menu background and for the buttons.",
 	"window-contrmenu-ersave": "Error while saving the menu layouts. Please try again.",
 	"window-contrmenu-ersave1": "Your access level doesn't allow setting the menu layouts.",
-	"window-contrmenu-oksave": "The menu layots were saved.",
+	"window-contrmenu-oksave": "The menu layouts were saved.",
+	
+	"window-contrcover-title": "Content covers",
+	"window-contrcover-registered": "Registered content covers",
+	"window-contrcover-load": "Load cover",
+	"window-contrcover-remove": "Remove cover",
+	"window-contrcover-name": "Content cover name",
+	"window-contrcover-properties": "Content cover properties",
+	"window-contrcover-landscape": "Landscape display cover picture", 
+	"window-contrcover-portrait": "Portrait display cover picture", 
+	"window-contrcover-block": "Block content interaction while showing?", 
+	"window-contrcover-save": "Save current content cover settings",
+	"window-contrcover-nographics": "You must set at least one of the cover pictures.",
+	"window-contrcover-noname": "You must give the content cover a name with at least 3 characters.",
+	"window-contrcover-ersave": "Error while saving the content covers. Please try again.",
+	"window-contrcover-ersave1": "Your access level doesn't allow setting the content covers.",
+	"window-contrcover-oksave": "The content covers were saved.",
+	"window-contrcover-add": "Add/update content cover",
+	
+	"window-contrform-title": "Input forms",
+	"window-contrform-registered": "Registered input forms",
+	"window-contrform-load": "Load form",
+	"window-contrform-remove": "Remove form",
+	"window-contrform-save": "Save current input forms settings",
+	"window-contrform-name": "Input form name",
+	"window-contrform-add": "Add/update input form",
+	"window-contrform-elements": "Input form elements",
+	"window-contrform-eladd": "add element",
+	"window-contrform-elrem": "remove element",
+	"window-contrform-noname": "You must give the input form a name with at least 3 characters.",
+	"window-contrform-nook": "You must set the image for the ok button.",
+	"window-contrform-noelem": "You must add input elements to your form.",
+	"window-contrform-ersave": "Error while saving the input forms. Please try again.",
+	"window-contrform-ersave1": "Your access level doesn't allow setting the input forms.",
+	"window-contrform-oksave": "The input forms were saved.",
+	"window-contrform-namebg": "background graphic (optional)",
+	"window-contrform-nameok": "submit button graphic",
+	"window-contrform-namecancel": "cancel button graphic (optional)",
+	"window-contrform-setbutton": "Set element", 
+	"window-contrform-background": "Background graphic (optional)", 
+	"window-contrform-btok": "Submit button graphic", 
+	"window-contrform-btcancel": "Cancel button graphic (optional)", 
+	"window-contrform-new": "new element", 
+	"window-contrform-elname": "Element name", 
+	"window-contrform-eltype": "Type", 
+	"window-contrform-eltype-input": "text input", 
+	"window-contrform-eltype-select": "select", 
+	"window-contrform-eltype-toggle": "toggle", 
+	"window-contrform-eltype-numeric": "numeric stepper", 
+	"window-contrform-eltype-password": "password", 
+	"window-contrform-eltype-textarea": "text area", 
+	"window-contrform-formelselect": "Select type options (use ; to split values)",
+	"window-contrform-formelwidth": "Element width", 
+	"window-contrform-formelposition": "Element position (relative to form origin)", 
+	"window-contrform-showtname": "The element name must have at least 3 characters.", 
+	"window-contrform-usedname": "The provided name is already used by another element.", 
+	
+	"window-contrinterf-title": "Interfaces",
+	"window-contrinterf-registered": "Registered interfaces",
+	"window-contrinterf-load": "Load interface",
+	"window-contrinterf-remove": "Remove interface",
+	"window-contrinterf-save": "Save current interfaces settings",
+	"window-contrinterf-name": "Interface name",
+	"window-contrinterf-add": "Add/update interface",
+	"window-contrinterf-elements": "Interface elements",
+	"window-contrinterf-background": "Background graphic (optional)", 
+	"window-contrinterf-setbutton": "Set element", 
+	"window-contrinterf-smap": "Animation setting (optional)", 
+	"window-contrinterf-smapac": "Animation click action (optional)", 
+	"window-contrinterf-formelposition": "Element position (relative to interface origin)", 
+	"window-contrinterf-text": "Interface text (optional)", 
+	"window-contrinterf-use": "Use text interface?", 
+	"window-contrinterf-font": "Text font", 
+	"window-contrinterf-fontsize": "Font size", 
+	"window-contrinterf-fontcolor": "Text color (use hexadecimal values)", 
+	"window-contrinterf-fontdeco": "Text decoration", 
+	"window-contrinterf-fontdeco-normal": "normal", 
+	"window-contrinterf-fontdeco-bold": "bold", 
+	"window-contrinterf-fontdeco-italic": "italic", 
+	"window-contrinterf-fontdeco-bolditalic": "bold and italic", 
+	"window-contrinterf-fontalign": "Text alignment", 
+	"window-contrinterf-fontalign-left": "left", 
+	"window-contrinterf-fontalign-right": "right", 
+	"window-contrinterf-fontalign-center": "center", 
+	"window-contrinterf-width": "Text area width",
+	"window-contrinterf-elac": "Element click action", 
+	"window-contrinterf-eladd": "add element",
+	"window-contrinterf-elrem": "remove element",
+	"window-contrinterf-namebg": "background graphic (optional)",
+	"window-contrinterf-nameanim": "animated graphic (optional)",
+	"window-contrinterf-nametx": "text area (optional)",
+	"window-contrinterf-namebutton": "button graphic",
+	"window-contrinterf-noname": "You must give the interface a name with at least 3 characters.",
+	"window-contrinterf-btgraph": "Button element", 
+	"window-contrinterf-ersave": "Error while saving the interfaces. Please try again.",
+	"window-contrinterf-ersave1": "Your access level doesn't allow setting the interfaces.",
+	"window-contrinterf-oksave": "The interfaces were saved.",
+	
+	"window-contrmusic-title": "Music",
+	"window-contrmusic-registered": "Registered music tracks",
+	"window-contrmusic-load": "Load music",
+	"window-contrmusic-remove": "Remove music",
+	"window-contrmusic-name": "Music track name",
+	"window-contrmusic-add": "Add/update music track",
+	"window-contrmusic-properties": "Music track properties",
+	"window-contrmusic-file": "Audio file", 
+	"window-contrmusic-save": "Save current music track settings",
+	"window-contrmusic-noaudio": "You must set the track audio file.",
+	"window-contrmusic-noname": "You must give the music track a name with at least 3 characters.",
+	"window-contrmusic-ersave": "Error while saving the music tracks. Please try again.",
+	"window-contrmusic-ersave1": "Your access level doesn't allow setting the music tracks.",
+	"window-contrmusic-oksave": "The music tracks were saved.",
 	
 	"menu-media-title": "Media", 
 	"menu-media-collectionsadd": "Add from collection", 
@@ -874,6 +990,8 @@
 	"window-exchcord-appauthor": "App author", 
 	"window-exchcord-appemail": "Author e-mail", 
 	"window-exchcord-applicense": "App license", 
+	"window-exchcord-fullscr": "Display on fullscreen (no status bar)?", 
+	"window-exchcord-icon": "App icon (use a 512x512 pixels PNG file)", 
 	"window-exchcord-button": "Export application", 
 	"window-exchcord-aboutcord": "The mobile apps are created using Apache Cordova.", 
 	"window-exchcord-buttoncord": "Visit the Apache Cordova site", 
@@ -1272,6 +1390,47 @@
 	"acinfo-showmenu-p5": "x distance from border or position", 
 	"acinfo-showmenu-p6": "y distance from border or position", 
 	"acinfo-hidemenu": "hide menus", 
+	"acinfo-showcover": "show content cover",
+	"acinfo-showcover-p1": "content cover name", 	
+	"acinfo-hidecover": "hide content covers", 
+	"acinfo-showloading": "show loading icon", 
+	"acinfo-hideloading": "hide loading icon", 
+	"acinfo-musicplay": "play music track", 
+	"acinfo-musicplay-p1": "music track name", 
+	"acinfo-musicpause": "pause current music", 
+	"acinfo-musicstop": "stop music playback",
+	"acinfo-musicvolume": "set music track volume", 
+	"acinfo-musicvolume-p1": "sound volume (0 to 100)", 
+	"acinfo-showform": "show an input form",
+	"acinfo-showform-p1": "the input form name", 
+	"acinfo-showform-p2": "form x position", 
+	"acinfo-showform-p3": "form y position", 
+	"acinfo-hideform": "hide input forms", 
+	"acinfo-setformvalue": "set an element value of current input form", 
+	"acinfo-setformvalue-p1": "the element name", 
+	"acinfo-setformvalue-p2": "the value to set (true/false for toggles)", 
+	"acinfo-setformstepper": "set numeric stepper element properties", 
+	"acinfo-setformstepper-p1": "the numeric stepper element name", 
+	"acinfo-setformstepper-p2": "minimum value", 
+	"acinfo-setformstepper-p3": "maximum value", 
+	"acinfo-setformstepper-p4": "step increase/decrease amount", 
+	"acinfo-showinterf": "show an interface",
+	"acinfo-showinterf-p1": "the interface name", 
+	"acinfo-showinterf-p2": "interface x position", 
+	"acinfo-showinterf-p3": "interface y position", 
+	"acinfo-hideinterf": "hide an interface",
+	"acinfo-hideinterf-p1": "the interface name", 
+	"acinfo-hideallinterf": "hide all interfaces",
+	"acinfo-interftext": "set an interface text",
+	"acinfo-interftext-p1": "the interface name", 
+	"acinfo-interftext-p2": "the text to display",
+	"acinfo-interfframe": "set an interface animation frame",
+	"acinfo-interfframe-p1": "the interface name", 
+	"acinfo-interfframe-p2": "the animation frame to display",
+	"acinfo-interfplay": "play an interface animation",
+	"acinfo-interfplay-p1": "the interface name", 
+	"acinfo-interfpause": "pause an interface animation",
+	"acinfo-interfpause-p1": "the interface name", 
 	
 	"placement-top": "top", 
 	"placement-topleft": "top left", 
@@ -1722,6 +1881,8 @@
 	"acinfo-systemquit": "end app execution (while on desktop app mode)",
 	"acinfo-systemsendevent": "send a custom event to player listeners",
     "acinfo-systemsendevent-p1": "event parameter (you may add more)",
+	"acinfo-systemsetkftime": "set the time between keyframes",
+	"acinfo-systemsetkftime-p1": "time in miliseconds (250 at least)",
 	"acinfo-run": "run a movie action snippet",
     "acinfo-run-p1": "the snippet name",
 	"acinfo-cssclear": "clear CSS styles set",
