--- a/server/public_html/app/assets/language/default.json
+++ b/server/public_html/app/assets/language/default.json
@@ -369,6 +369,7 @@
 	"window-movieprop-input-swipeleft": "Touchscreen swipe from left", 
 	"window-movieprop-input-swipetop": "Touchscreen swipe from top", 
 	"window-movieprop-input-swipebottom": "Touchscreen swipe from bottom", 
+	"window-movieprop-input-touchhold": "Touch and hold (more than 1 second)", 
 	"window-movieprop-input-keyhome": "Keyboard home", 
 	"window-movieprop-input-keyend": "Keyboard end", 
 	"window-movieprop-input-mousemiddle": "Mouse middle button click", 
@@ -676,6 +677,7 @@
 	
 	"menu-contraptions-title": "Contraptions", 
 	"menu-contraptions-cover": "Content cover", 
+	"menu-contraptions-background": "Backgrounds", 
 	"menu-contraptions-menus": "Menu layouts", 
 	"menu-contraptions-music": "Music", 
 	"menu-contraptions-forms": "Input Forms", 
@@ -766,6 +768,22 @@
 	"window-contrcover-ersave1": "Your access level doesn't allow setting the content covers.",
 	"window-contrcover-oksave": "The content covers were saved.",
 	"window-contrcover-add": "Add/update content cover",
+	
+	"window-contrbg-title": "Backgrounds",
+	"window-contrbg-registered": "Registered backgrounds",
+	"window-contrbg-load": "Load background",
+	"window-contrbg-remove": "Remove background",
+	"window-contrbg-name": "Background name",
+	"window-contrbg-properties": "Background properties",
+	"window-contrbg-landscape": "Landscape display background picture", 
+	"window-contrbg-portrait": "Portrait display background picture", 
+	"window-contrbg-save": "Save current background settings",
+	"window-contrbg-nographics": "You must set at least one of the background pictures.",
+	"window-contrbg-noname": "You must give the background a name with at least 3 characters.",
+	"window-contrbg-ersave": "Error while saving the backgrounds. Please try again.",
+	"window-contrbg-ersave1": "Your access level doesn't allow setting the backgrounds.",
+	"window-contrbg-oksave": "The background were saved.",
+	"window-contrbg-add": "Add/update background",
 	
 	"window-contrform-title": "Input forms",
 	"window-contrform-registered": "Registered input forms",
@@ -1392,7 +1410,10 @@
 	"acinfo-hidemenu": "hide menus", 
 	"acinfo-showcover": "show content cover",
 	"acinfo-showcover-p1": "content cover name", 	
-	"acinfo-hidecover": "hide content covers", 
+	"acinfo-hidecover": "hide content covers",
+	"acinfo-showbg": "show background picture",
+	"acinfo-showbg-p1": "background name", 	
+	"acinfo-hidebg": "hide background picture",
 	"acinfo-showloading": "show loading icon", 
 	"acinfo-hideloading": "hide loading icon", 
 	"acinfo-musicplay": "play music track", 
@@ -1879,6 +1900,17 @@
 	"acinfo-systemopenurl": "open an URL on browser",
     "acinfo-systemopenurl-p1": "the URL to open",
 	"acinfo-systemquit": "end app execution (while on desktop app mode)",
+	"acinfo-systempwainstall": "prompt visitor for PWA installation",
+	"acinfo-systemifpwainstalled": "check if running from an installed PWA",
+	"acinfo-systemifhorizontal": "check if the display is horizontal",
+	"acinfo-systemifvertical": "check if the display is vertical",
+	"acinfo-systemifwebsite": "check if running on website export runtime",
+	"acinfo-systemifpwa": "check if running on PWA export runtime",
+	"acinfo-systemifdesktop": "check if running on desktop app export runtime",
+	"acinfo-systemifmobile": "check if running on mobile app export runtime",
+	"acinfo-systemifpublish": "check if running on publish services export runtime",
+	"acinfo-systemifplayer": "check if running on TilBuci player",
+	
 	"acinfo-systemsendevent": "send a custom event to player listeners",
     "acinfo-systemsendevent-p1": "event parameter (you may add more)",
 	"acinfo-systemsetkftime": "set the time between keyframes",
